# llm_agent_evolution

./: .gitignore  .pylintrc  generic_dev_agent.sh  notes.md  pyproject.toml  report_agent.sh  requirements.txt  spec.md  task_list.md  task_list_agent.sh
genetic_llm/: .coveragerc  cli.py  cli_commands.py  cli_factory.py  config.py  mutation_operator.py  mutation_operator_abc.py  project_report.md  pyproject.toml
genetic_llm/core/: __init__.py  notes.md
genetic_llm/core/evaluators/: string_optimizer.py
genetic_llm/core/tests/: test_core.py  test_string_optimizer.py
genetic_llm/core_abc/: __init__.py  chromosome_type.py
genetic_llm/evolution/: __init__.py  notes.md
genetic_llm/evolution/tests/: test_edge_cases.py  test_evolution.py  test_helpers.py  test_semantics.py
genetic_llm/evolution_abc/: __init__.py
genetic_llm/mate_selection/: __init__.py  notes.md
genetic_llm/mate_selection/tests/: test_mate_selector.py
genetic_llm/mate_selection_abc/: __init__.py
genetic_llm/recombination/: NOTES.md  __init__.py  notes.md  schemas.py
genetic_llm/recombination/tests/: test_recombiner.py
genetic_llm/recombination_abc/: __init__.py
genetic_llm/validation/: chromosome_validator.py  default_schemas.py
tests/: test_abc_pattern.py  test_core.py  test_dspy_mate_selector.py  test_evolution.py  test_interface_impl.py
