[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "genetic_llm"
version = "0.1.0"
description = "Genetic optimization system for LLM agents using DSPy and genetic algorithms"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dspy>=2.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "click>=8.0",
    "python-dotenv>=1.0"
]

[project.scripts]
genetic-llm = "genetic_llm.cli:main"

[tool.pytest.ini_options]
testpaths = ["genetic_llm"]
addopts = "-v --cov=genetic_llm --cov-report=term-missing"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"genetic_llm" = ["py.typed"]
